--- a/index.html
+++ b/index.html
@@ -68,6 +68,8 @@
         <div class="hidebg">
             <img src="./img/main_04.jpg" alt="">
             <img src="./img/main_05.jpg" alt="">
+            <img src="./img/main_06.jpg" alt="">
+            <img src="./img/main_07.jpg" alt="">
             <img src="./img/main_08.jpg" alt="">
         </div>
         <div class="wrap">
@@ -79,18 +81,18 @@
         <section id="intro">
             <div class="wrap">
                 <h2 class="font_gr wow fadeInDown">Intro</h2>
-                <div class="cont wow fadeInUp" data-wow-delay="0.5s">
-                    <div class="box">
+                <div class="cont">
+                    <div class="box wow fadeInLeft">
                         <h3>ANIMAL</h3>
                         <div class="img_part"></div>
                         <p>cashmere values every life on this planet. <br>All our products are made from naturally-shed hair without harming the animals. We set our friends free at all times, providing them with high-quality grass only.</p>
                     </div>
-                    <div class="box">
+                    <div class="box wow fadeInUp">
                         <h3>LOCAL PRODUCERS</h3>
                         <div class="img_part"></div>
                         <p>cashmere believes in mutual growth with everyone engaged in our journey. We support our local producers’ economic independence through reliable buying practice and brand creation.</p>
                     </div>
-                    <div class="box">
+                    <div class="box wow fadeInRight">
                         <h3>ENVIRONMENT</h3>
                         <div class="img_part"></div>
                         <p>cashmere cares foremost about our nature. From attentive pasture management to zerowaste technology, in every step of our process protecting environment is our top priority. Buy one le cashmere, adopt one tree.</p>
@@ -103,14 +105,14 @@
             <div class="wrap">
                 <h2 class="font_gr wow fadeInDown">Story</h2>
                 <div class="cont">
-                    <div class="box wow fadeInUp" data-wow-delay="0.5s">
+                    <div class="box wow fadeInLeft">
                         <div class="img_part"></div>
                         <div class="txt_part">
                             <h3>Pure cotton that everyone is happy</h3>
                             <p>In principle, fair trade aims to improve producers' lives and become independent by providing jobs to those who are socially and economically vulnerable and purchasing raw materials and products at an appropriate price. <br>When you make products with the right organic products rather than to support someone, the relationship of fair trade is naturally formed.</p>
                         </div>
                     </div>
-                    <div class="box wow fadeInUp" data-wow-delay="0.5s">
+                    <div class="box wow fadeInRight">
                         <div class="img_part"></div>
                         <div class="txt_part">
                             <h3>Precision in consideration of ecology</h3>
@@ -224,6 +226,11 @@
     </section>
     </div>
 
+    <section id="mapandimg">
+        <div id="map"></div>
+        <div class="img"></div>
+    </section>
+
     <footer>
         <div class="wrap">
             <div class="info">
@@ -251,11 +258,23 @@
                         </li>
                     </ul>
                 </div>
-            </div>
+            </div>            
             <div class="copyright">
                 <p>COPYRIGHTS ⓒ CASHMERE.LTD. ALL RIGHTS RESERVED.</p>
             </div>
         </div>
     </footer>
+
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCMOwJdqgkxI6MQb4E95pSSBF1TABF5pZA&callback=initMap"></script>
+    <script>
+        function initMap() { 
+            var uluru = {lat: 51.519987, lng: -0.156517}; //lat(latitude, 위도), lng(longitude, 경도)
+            var map = new google.maps.Map(document.getElementById('map'), { 
+                zoom: 17, 
+                center: uluru 
+            }); 
+            var marker = new google.maps.Marker({ position: uluru, map: map }); 
+        }
+    </script>
 </body>
 </html>
