--- a/index.html
+++ b/index.html
@@ -33,6 +33,15 @@
             });
         });
     </script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-54BD1S1B7F"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-54BD1S1B7F');
+    </script>
 </head>
 <body>
     <header>
